# prediction

correlations/: correlation.ncb  ttest.c
correlations/CEdata_split/: README.txt
correlations/CEdata_split/train/: train1.txt  train10.txt  train100.txt  train1000.txt  train1001.txt  train1002.txt  train1003.txt  train1004.txt  train1005.txt  train1006.txt  train1007.txt  train1008.txt  train1009.txt  train101.txt  train1010.txt  train1011.txt  train1012.txt  train1013.txt  train1014.txt  train1015.txt  train1016.txt  train1017.txt  train1018.txt  train1019.txt  train102.txt  train1020.txt  train1021.txt  train1022.txt  train1023.txt  train1024.txt  train1025.txt  train1026.txt  train1027.txt  train1028.txt  train1029.txt  train103.txt  train1030.txt  train1031.txt  train1032.txt  train1033.txt  (+7792 more)
correlations/correlations/: Extractor.cpp  Extractor.h  NNAttribute.cpp  NNAttribute.h  NNBase.cpp  NNBase.h  Network.cpp  Network.h  correlate.cpp  correlations.vcproj  fourexp.cpp  lmcurve.cpp  lmcurve.h  lmmin.cpp  notes.txt  stdafx.cpp  stdafx.h
correlations/samplecode/: CauseOrEffect_NICA.rar  NIPS2011-code.tar  additive-noise.tar  hipersat1.1.tgz  igci.tar  nips2010-gpi-code.tar
correlations/samplecode/hipersat1.1/hipersat1.1/system/: config.guess  config.sub  configure.ac  install.sh  make.common  make.in  make.linux_gcc  make.mac_gcc  make.mac_gcc_debug  make.mac_gcc_mpi  make.mac_gcc_tau  make.neuronic_icc_unified  make.optix_icc_unified  make.p6xx_xlc_unified  make.skel  make.xp_gcc
master/master/: master.ncb  master.sln
master/master/Debug/: correlations.ilk  (+2 more)
(+3350 files in other folders)
